@@ -1,3 +1,13 @@
+2012-08-23  Steve McIntyre  <steve.mcintyre@linaro.org>
+
+	* elf/elf.h (EF_ARM_ABI_FLOAT_SOFT): New macro.
+	(EF_ARM_ABI_FLOAT_HARD): Likewise.
+
+2012-08-23  Joseph Myers  <joseph@codesourcery.com>
+
+	* sysdeps/unix/sysv/linux/dl-fxstatat64.c: Use <> instead of "" in
+	#include of fxstatat64.c.
+
 2012-08-22  Roland McGrath  <roland@hack.frob.com>
 
 	* shadow/getspent.c: #undef USE_NSCD before #include that gets the code.
